# jamoo-dev-website

./: .dockerignore  Cargo.toml  Dockerfile  README.md  container-jamoo.dev.service  install.sh  run.sh
deploy/: jamoo-website-dev.yaml  local-k8s.sh
frontend/: index.html  salary-transparency.html
pages/: index.mustache  salary-transparency.mustache
posts/: Fixing SFP in OPNsense on a Gowin R86S.md  Running Website as Limited User.md  SFP-R86S.md
src/: blog.rs  compress.rs  config.rs  main.rs  negotation.rs  rss_build.rs  server.rs  util.rs
static/: main.css
templates/: header.mustache
templates/pages/: blog.mustache  index.mustache  salary-transparency.mustache
