[package]
name = "jamoo-website-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
# routing dependencies
iron = "0.6.1"
mustache = "0.9.0"
router = "0.6.0"
markdown = "1.0.0-alpha.16"
serde = "1.0.195"
chrono = "0.4.31"
rss = { version = "2.0", features = ["serde"] }
# server features we're re-implementing
flate2 = "1.0.28"
# common dependencies
itertools = "0.12.0"
anyhow = "1.0.79"
log = "0.4.20"
hex = "0.4.3"