[package]
name = "jamoo-website-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
# routing dependencies
tokio = { version = "1.35.1" , features = ["rt-multi-thread"]}
axum = { version = "0.7.4" , features = ["http2"]}
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["compression-br", "compression-deflate",
    "compression-gzip", "compression-zstd", "fs"]  }
# response-generating dependencies
mustache = "0.9.0"
markdown = "1.0.0-alpha.16"
serde = "1.0.195"
chrono = "0.4.31"
rss = { version = "2.0", features = ["serde"] }
# common dependencies
itertools = "0.12.0"
anyhow = "1.0.79"
log = "0.4.20"
hex = "0.4.3"